[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://demo/scenes/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/scenes/2D_example.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="CurrentScene" type="Node" parent="."]

[node name="2DExample" parent="CurrentScene" instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="goto_2D" from="CanvasLayer/HUD" to="." method="_on_HUD_goto_2D"]
[connection signal="goto_3D" from="CanvasLayer/HUD" to="." method="_on_HUD_goto_3D"]
[connection signal="transition_simple" from="CanvasLayer/HUD" to="." method="_on_HUD_transition_simple"]
[connection signal="transition_smooth" from="CanvasLayer/HUD" to="." method="_on_HUD_transition_smooth"]
